--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,41 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
-node_modules
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# logs
-npm-debug.log
+# testing
+/coverage
 
-# Nuxt build
-.nuxt
+# next.js
+/.next/
+/out/
 
-# Nuxt generate
-dist
+# production
+/build
 
-# Ignore generated service workers
-app/static/sw.js
-app/static/workbox-sw.prod*
-
-# yarn
-yarn-error.log
-
-# Jest Coverage
-coverage
+# misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
